--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
     "react-to-pdf": "^1.0.1",
+    "react-use-websocket": "^4.11.1",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
     "sass": "^1.81.0",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
